# dynamic-metadata

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml
docs/: backend_authors.md  backend_authors_reimplement.md  conf.py  index.md  plugin_authors.md  plugins.md  users.md
docs/api/: index.md
src/dynamic_metadata/: __init__.py  __main__.py  discovery.py  info.py  loader.py  protocols.py  schema.py
src/dynamic_metadata/_compat/: __init__.py  metadata.py  typing.py
src/dynamic_metadata/plugins/: __init__.py  fancy_pypi_readme.py  readme_fragment.py  regex.py  setuptools_scm.py  static.py  substitute.py  template.py
src/dynamic_metadata/resources/: toml_schema.json
tests/: test_package.py
