[build-system]
requires = ["flit-core >=3.11"]
build-backend = "flit_core.buildapi"


[project]
name = "dynamic-metadata"
authors = [
  { name = "Henry Schreiner", email = "henryschreineriii@gmail.com" },
]
description = "This project is intended to document dynamic-metadata support."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "typing_extensions >=4.6; python_version<'3.11'",
  "tomli >=1.1; python_version<'3.11'",
]

[project.scripts]
dynamic-metadata = "dynamic_metadata.__main__:main"

[project.urls]
Homepage = "https://github.com/scikit-build/dynamic-metadata"
"Bug Tracker" = "https://github.com/scikit-build/dynamic-metadata/issues"
Discussions = "https://github.com/scikit-build/dynamic-metadata/discussions"
Changelog = "https://github.com/scikit-build/dynamic-metadata/releases"

[project.entry-points."validate_pyproject.tool_schema"]
dynamic-metadata = "dynamic_metadata.schema:get_schema"

[tool.flit.sdist]
include = ["tests/**/*.py", "docs/"]
exclude = ["**/*.egg-info", "docs/_build"]

[tool.check-sdist]
git-only = [
  ".git_archival.txt",
  ".gitattributes",
  ".gitignore",
  "AGENTS.md",
  "uv.lock",
]

[dependency-groups]
test = [
  "pytest >=7",
  "pytest-cov >=3",
]
dev = [{ include-group = "test" }]
docs = [
  "sphinx>=4.0",
  "myst_parser>=5.1; python_version>='3.11'",
  "sphinx_book_theme>=0.1.0",
  "sphinx_copybutton",
  "sphinx_autodoc_typehints",
  "furo",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
  "ignore:(ast.Str|Attribute s|ast.NameConstant|ast.Num) is deprecated:DeprecationWarning:_pytest",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]


[tool.coverage]
run.source = ["dynamic_metadata"]
port.exclude_lines = [
  'pragma: no cover',
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.10"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "dynamic_metadata.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff.lint]
extend-select = [
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
  "NPY",         # NumPy specific rules
  "PD",          # pandas-vet
]
flake8-unused-arguments.ignore-variadic-names = true
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]
"src/dynamic_metadata/__main__.py" = ["T20"]  # CLI prints to stdout
"src/dynamic_metadata/plugins/*" = ["PLC0415"]  # plugins lazy-import optional deps


[tool.pylint]
py-version = "3.8"
ignore-paths= ["src/dynamic_metadata/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "wrong-import-position",
  "missing-class-docstring",
  "missing-function-docstring",
  "import-outside-toplevel",
  "invalid-name",
  "unused-argument",  # Ruff
]
